make a standard index frame

--- a/standard_index.html
+++ b/standard_index.html
@@ -21,371 +21,7 @@
 
 <body>
 
-<script>
-    //屏蔽ios下上下弹性
-    $(window).on('scroll.elasticity', function (e) {e.preventDefault();}).on('touchmove.elasticity', function (e) {e.preventDefault();});
-    $(".preload,.page,.floor").on("touchmove", function(t) {t.preventDefault()});
-    var level_left=['-1.7rem','-0.45rem','0.85rem','2.1rem','3.4rem','4.7rem','6.1rem'];
-    var rand,levels=[];
-    var browser = {
-        versions: function() {
-            var u = navigator.userAgent, app = navigator.appVersion;
-            return {							//移动终端浏览器版本信息
-                webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
-                mobile: !!u.match(/AppleWebKit.*Mobile.*/) || !!u.match(/AppleWebKit/), //是否为移动终端
-                ios: /(iPhone|iPad|iPod|iOS)/i.test(u), //ios终端
-                android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器
-                weixin: !!u.match(/micromessenger/i)
-
-            };
-        }(),
-        language: (navigator.browserLanguage ||  navigator.language).toLowerCase()
-    };
 
 
-    var finalText=[], curEleid=0;
-    window.onload=function () {
-        loadImage(imgindex);
-
-		var Url=location.search,
-                url_addr=parseInt(Url.slice(1,2));
-         if(url_addr<=1){
-			$(".qrcode").attr("src",baseUrl+"weixin1_qrcode.png?6");
-		 }else{
-			$(".qrcode").attr("src",baseUrl+"weixin25_qrcode.png?6");
-		 }   
-
-        $(".tip-5")[0].addEventListener("webkitAnimationEnd",function(){
-            setTimeout(function () {
-                fadeOut(".p3-tip1");
-                $(".select-level").show();
-            },1000);
-        });
-       var urls_andr=[
-           'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794651089',
-           'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794651091',
-           'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794651092',
-           'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794924888',
-           'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794924891',
-		   'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794651091',
-           'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794651091',
-           'http://a.app.qq.com/o/simple.jsp?pkgname=com.iflytek.inputmethod&ckey=CK1417794651092'
-       ];
-       var urls_ios=[
-           'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120001&mt=8',
-           'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120002&mt=8',
-           'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120003&mt=8',
-           'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120004&mt=8',
-           'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120005&mt=8',
-		   'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120002&mt=8',
-           'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120002&mt=8',
-           'https://itunes.apple.com/app/apple-store/id917236063?pt=347483&ct=XF16120003&mt=8'
-       ];
-        $(".link-btn").click(function () {
-            var Url=location.search,
-                url_addr=parseInt(Url.slice(1,2))-1;
-            if(browser.versions.android){
-                window.location.href=urls_andr[url_addr];
-            }else if(browser.versions.ios){
-                window.location.href=urls_ios[url_addr];
-            }else{
-				window.location.href=urls_andr[url_addr];
-			}
-            _hmt.push(['_trackEvent', 'button', '讯飞解字微信端-点击下载', '', '']);
-        });
-
-        $(".share-btn").click(function () {
-            $(".share-mask").show();
-        });
-        $(".share-mask").on("touchend",function () {
-            $(this).hide();
-        });
-        //填写 姓名
-        $(".p2-viewBtn").on("touchend",function () {
-            fadeOut(".ballgif");
-            $(this).hide();
-            $(".inp,.p2-sureBtn").show();
-            _hmt.push(['_trackEvent', 'button', '讯飞解字微信端-点击查看', '', '']);
-        });
-        //提交 姓名
-        $(".p2-sureBtn").on("touchend",function () {
-            var name=$("#name").val();
-            if(name.length<=0){
-                alert("请输入姓名")
-            }else if(isBadWord(name)){
-                alert("好像输入了不太妥当的词，要不你再检查一下？")
-            }else{
-                fadeOut(".page2");
-                fadeOut(".p2-sureBtn");
-                fadeIn(".page3");
-                $(".post-name").html(name);
-                $(".level-active").css("left",level_left[0]);
-				_hmt.push(['_trackEvent', 'button', '讯飞解字微信端-提交姓名', '', '']);
-            }
-			
-        });
-
-        $("#name").blur(function(){
-            document.body.addEventListener('focusout', function (evt) {
-                document.body.scrollTop = 0;
-            });
-        });
-        //楼层选择
-        $(".select-box p").click(function () {
-            if(!isclick) return;
-            if(time==0) return;
-
-            var that = this;
-            //已经选择过楼层不能再选
-            if(!$(this).hasClass("disabled")){
-                time--;
-                isclick=false;
-
-                var idx=6-$(this).index();
-                curFloor=idx;
-                $(this).addClass("disabled");
-
-                setTimeout(function () {
-                    
-                    $(".select-box").removeClass("fadeInUp").addClass("fadeToUp");
-                    fadeOut(".p3-tip2");
-                    closedoor();
-                    startRun(idx);
-                },600);
-                _hmt.push(['_trackEvent', 'button', '讯飞解字微信端-'+idx+'层', '', '']);
-            }
-        });
-
-        //场景物品选择
-        $(".cb").click(function () {
-            var _idx = $(this).index();
-            curEleid=$(this).attr("data-id");
-            if(curFloor==1){
-                $(".fe").eq(_idx).addClass("active").siblings(".fe").removeClass("active");
-            }
-
-            $(this).addClass("active").siblings(".cb").removeClass("active");
-            $(".sure-btn").show();
-            $(".floor"+curFloor).find("i").hide();
-            $(".f"+curFloor+"-pop"+(_idx+1)).show();
-
-            console.log(curEleid);
-        });
-
-        $(".sure-btn").click(function () {
-            //stopPopAni();
-            $(".sure-btn").hide();
-            fadeIn(".page");
-            fadeOut(".floor");
-            finalText.push(keytexts[curFloor].floor[curEleid]);
-            console.log(finalText);
-            if(time<=0){
-                $(".page3").hide();
-                finalText.forEach(function (item,index) {
-                    if(item.level>0){
-                        levels.push(index);//记录优先级是A的索引
-                        rand=levels[Math.floor(Math.random()*levels.length)];
-                    }
-                    if(index==2 && levels.length<=0){
-                        rand=Math.floor(Math.random()*3)
-                    }
-                    console.log(levels);
-                });
-                $(".key-word").html(finalText[rand].keyword);
-                $(".key-text").html(finalText[rand].keytext);
-                $(".text-1").html(finalText[0].discription);
-                $(".text-2").html(finalText[1].discription);
-                $(".text-3").html(finalText[2].discription);
-                $(".elevator").addClass("p5-scale");
-                setTimeout(function () {
-                    fadeIn(".page4");
-                    setTimeout(function () {
-                        fadeOut(".mix-tip1");
-                        fadeIn(".mix-tip2");
-                        $(".small-post").show();
-                        showPostRes();
-                    },1800);
-                },800);
-            }else{
-                $(".select-box").removeClass("fadeToUp").addClass("fadeInUp");
-                $(".p3-tip2").show();
-
-                if(time==2){
-                    $(".p3-tip2").addClass("p3-tip3");
-                }else if(time==1){
-                    $(".p3-tip2").removeClass("p3-tip3").addClass("p3-tip4");
-                }
-            }
-        });
-
-        $(".final-post").on("touchstart",function(){
-           _hmt.push(['_trackEvent', 'button', '讯飞解字微信端-分享', '', '']);
-        });
-    };
-    var  Dom={
-        canvas : document.getElementById("ourCanvas"),
-        scale: 2,
-        wWidth : $(window).width(),
-        wHeight : $(window).height(),
-        percent:$(".percent")
-    };
-    var htmlToCanvas={
-        initCanvas:function(){
-            var postwrap=$(".post-wrap");
-            postwrap.show();
-            Dom.canvas.width =postwrap.width()*Dom.scale;
-            Dom.canvas.height = postwrap.height()*Dom.scale;
-            var context = Dom.canvas.getContext("2d");
-            context.scale(Dom.scale,Dom.scale);
-        },
-        clearCanvas:function(){
-            var context =  Dom.canvas.getContext("2d");
-            context.clearRect(0,0,Dom.canvas.width,Dom.canvas.height);
-        },
-        canvasToImg:function () {//合成
-            var postwrap=$(".post-wrap");
-            html2canvas(postwrap[0],{
-                //allowTaint: true,
-                //logging:true,
-                canvas: Dom.canvas,
-                useCORS: true ,
-                //backgroundColor:'#fff',
-                onrendered:function(canvas) {
-                    imgData = canvas.toDataURL("image/jpg");
-                    $(".final-post").show().attr("src",imgData);//最终海报
-                    postwrap.hide();
-                    fadeOut(".page4");
-                    opendoor(function () {
-                        $(".page5").show();
-                    });
-                }
-            });
-        }
-    };
-    function showPostRes() {
-        var bgImg = new Image();
-        bgImg.src=baseUrl+"post.jpg"+n;
-        //bgImg.onload=function () {
-            htmlToCanvas.initCanvas();
-            setTimeout(function () {
-                htmlToCanvas.canvasToImg();
-            },2000);
-       // }
-    }
-    function popAni(obj) {
-        var popArr=$(obj).find("i");
-        var i=0;
-        aniTime=setInterval(function () {
-            popArr.hide().eq(i).show().css("display","block");
-            i++;
-            if(i>=popArr.length){
-                i=0;
-            }
-        },2000)
-    }
-    function stopPopAni() {
-        clearInterval(aniTime);
-    }
-    var startfloor=-1;
-    function startRun(curfloor){
-        var i=startfloor;
-        var timer=setInterval(function(){
-            console.log("startfloor="+startfloor+"  curfloor="+curfloor);
-            if(startfloor<=curfloor){//网上走
-                i++;
-                $(".level-active").css("left",level_left[i]);
-                if(i>=curfloor){
-                    clearInterval(timer);
-                    arrivedFloor(curfloor);
-                }
-            }else{
-                i--;
-                $(".level-active").css("left",level_left[i]);
-                if(i<=curfloor){
-                    clearInterval(timer);
-                    arrivedFloor(curfloor);
-                }
-            }
-        },700);
-    }
-    function arrivedFloor(curfloor) {
-        startfloor=curfloor;
-        $("#arriveAudio")[0].play();
-        $(".floor"+curfloor).show();
-        setTimeout(function () {
-            fadeOut(".page");
-			isclick=true;
-        },1200);
-    }
-
-    function opendoor(callback) {
-        $(".left-door,.right-door").addClass("opendoor");
-        setTimeout(function(){
-            $(".left-door").removeClass("opendoor").css("-webkit-transform","translate(-50%,0)");
-            $(".right-door").removeClass("opendoor").css("-webkit-transform","translate(50%,0)");
-
-            callback&&callback();
-        },800);
-    }
-    function closedoor(callback) {
-        $(".left-door,.right-door").addClass("closedoor");
-        setTimeout(function () {
-            $(".left-door,.right-door").removeClass("closedoor").css("-webkit-transform","");
-            callback&&callback();
-        },800);
-    }
-    function loadImage(imgIndex){
-        var img = new Image();
-        img.src = fileList[imgIndex];
-        var percent = parseInt(imgIndex/fileList.length *100);
-        img.onload = function () {
-            imgIndex++;
-            if(imgIndex < fileList.length){
-                loadImage(imgIndex);
-                if(percent<=10){
-                    $(".level-active").css("left",level_left[0]);
-                }else if(percent>10 && percent<=30){
-                    $(".level-active").css("left",level_left[1]);
-                }else if(percent>30 && percent<=40){
-                    $(".level-active").css("left",level_left[2]);
-                }else if(percent>40 && percent<=60){
-                    $(".level-active").css("left",level_left[3]);
-                }else if(percent>60 && percent<=80){
-                    $(".level-active").css("left",level_left[4]);
-                }else if(percent>80 && percent<100){
-                    $(".level-active").css("left",level_left[5]);
-                }
-            }else{
-                $(".level-active").css("left",level_left[6]);
-                loadImage2(0);
-                setTimeout(function () {
-                    fadeOut(".preload");
-                    fadeIn(".page2");
-                    opendoor();
-                },1200);
-            }
-        }
-    }
-    function loadImage2(imgIndex){
-        var img = new Image();
-        img.src = fileList2[imgIndex];
-        // percent = parseInt(imgIndex/fileList.length *100);
-        img.onload = function () {
-            imgIndex++;
-            if(imgIndex < fileList2.length){
-                loadImage2(imgIndex);
-            }else{
-            }
-        }
-    }
-
-
-
-
-</script><p class="musicIco play"></p><audio src="images/bgmusic.mp3?1" preload="true" loop=""></audio>
-<script src="./查看你的2019本命字_files/jweixin-1.0.0.js.download"></script>
-<script>
-
-</script>
-
-</body></html>
+</body>
+</html>
